tests/baselines/reference/parserAccessors5.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors5.ts(2,15): error TS1036: Statements are not allowed in ambient contexts.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors5.ts (1 errors) ====
    declare class C {
      get foo() { return 0; }
                  ~~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    }